--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     </script>
 
     <script src="bower_components/jquery/jquery.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
         <!-- build:js scripts/plugins.js -->
